--- a/sangucheto/TpSangucheto/WebContent/WEB-INF/web.xml
+++ b/sangucheto/TpSangucheto/WebContent/WEB-INF/web.xml
@@ -10,15 +10,15 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
-        <servlet-name>spring</servlet-name>
+        <servlet-name>TpSangucheto</servlet-name>
         <servlet-class>
             org.springframework.web.servlet.DispatcherServlet
         </servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>spring</servlet-name>
-        <url-pattern>*.do</url-pattern>
+        <servlet-name>TpSangucheto</servlet-name>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
     
    	<listener>
